@@ -9,7 +9,7 @@ libs:
 	cd src && $(MAKE) $@
 
 tek/lib/tekui_classlib.c:
-	bin/compiler.lua -o $@ -l $$(cat tek/lib/MODLIST) -c $(LUAARCH) -s
+	bin/compiler.lua -o $@ -l $$(cat tek/lib/MODLIST) -c -s
 
 dll: modules tek/lib/tekui_classlib.c
 	cd tek/lib && $(MAKE) $@
