@@ -10,6 +10,15 @@
 		<h2>
 			tekUI Changelog
 		</h2>
+		<blockquote>
+			<ul>
+				<li>
+					Compiler tool: Now works with Lua 5.1/5.2/5.3 using the method shown in
+					lua-amalg by Philipp Janda, LUAARCH switch is no longer needed, module
+					sampling is now done in a LuaExec task, no module statistics files needed
+				</li>
+			</ul>
+		</blockquote>
 		<h3>
 			1.12:
 		</h3>
