@@ -5,7 +5,7 @@
 	<head>
 		<title>tekUI Class Reference Manual</title>
 		<link rel="stylesheet" href="manual.css" />
-		<meta name="created" content="04-Feb-2015" />
+		<meta name="created" content="14-Feb-2015" />
 	</head>
 	<body>
 		<h1>
@@ -5206,7 +5206,7 @@ end
 			</p>
 			<hr class="page-break" />
 		</div>
-		<div class="node"><h2><a name="tek.ui.class.display" id="tek.ui.class.display">Display (v33.6)</a></h2>
+		<div class="node"><h2><a name="tek.ui.class.display" id="tek.ui.class.display">Display (v33.7)</a></h2>
 			<div class="definition"><dfn>OVERVIEW</dfn>
 				<blockquote>
 					<p>
@@ -9400,7 +9400,7 @@ ui.Window:new {
 				</blockquote>
 				<hr class="page-break" />
 				<p>
-					Document generated on Wed Feb  4 22:49:55 2015 using gendoc.lua version 1.5
+					Document generated on Sat Feb 14 14:12:32 2015 using gendoc.lua version 1.5
 				</p>
 			</div>
 		</div>
