@@ -19,36 +19,50 @@
 
 #define loslib_c
 #define luaall_c
+#define lobject_c
+#define lvm_c
+#define lua_c
 
 #include "lapi.c"
+#include "lauxlib.c"
+#include "lbaselib.c"
+
+#if LUA_VERSION_NUM >= 502
+#if LUA_VERSION_NUM == 502 || LUA_COMPAT_BITLIB
+#include "lbitlib.c"
+#endif
+#include "lcorolib.c"
+#include "lctype.c"
+#if LUA_VERSION_NUM >= 503
+#include "lutf8lib.c"
+#endif
+#endif
+
 #include "lcode.c"
+#include "ldblib.c"
 #include "ldebug.c"
 #include "ldo.c"
 #include "ldump.c"
 #include "lfunc.c"
 #include "lgc.c"
+#include "liolib.c"
 #include "llex.c"
+#include "lmathlib.c"
 #include "lmem.c"
+#include "loadlib.c"
 #include "lobject.c"
 #include "lopcodes.c"
+#include "loslib.c"
 #include "lparser.c"
 #include "lstate.c"
 #include "lstring.c"
+#include "lstrlib.c"
 #include "ltable.c"
+#include "ltablib.c"
 #include "ltm.c"
 #include "lundump.c"
 #include "lvm.c"
 #include "lzio.c"
-
-#include "lauxlib.c"
-#include "lbaselib.c"
-#include "ldblib.c"
-#include "liolib.c"
-#include "lmathlib.c"
-#include "loadlib.c"
-#include "loslib.c"
-#include "lstrlib.c"
-#include "ltablib.c"
 
 #include "exec_lua.c"
 #include "visual_api.c"
